@@ -29,6 +29,7 @@ import javax.crypto.Cipher;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.wso2.carbon.identity.application.authentication.framework.AbstractApplicationAuthenticator;
@@ -47,8 +48,6 @@ import org.wso2.carbon.identity.oauth.cache.SessionDataCacheKey;
 import org.wso2.carbon.identity.oauth.common.OAuthConstants;
 
 import com.wso2telco.gsma.authenticators.util.AuthenticationContextHelper;
-
-import sun.misc.BASE64Decoder;
 
  
 // TODO: Auto-generated Javadoc
@@ -196,7 +195,8 @@ public class GSMAMSISDNAuthenticator extends AbstractApplicationAuthenticator im
 	 */
 	private String decryptData(String strData) throws IOException {
 
-		byte[] data = new BASE64Decoder().decodeBuffer(strData);
+		//byte[] data = new BASE64Decoder().decodeBuffer(strData);
+		byte[] data = Base64.decodeBase64(strData);
 		byte[] descryptedData = null;
 
 		try {
@@ -229,7 +229,8 @@ public class GSMAMSISDNAuthenticator extends AbstractApplicationAuthenticator im
 			NoSuchAlgorithmException, InvalidKeySpecException {
 
 		String publicK = readStringKey(fileName);
-		byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicK);
+		//byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicK);
+		byte[] keyBytes = Base64.decodeBase64(publicK);
 		PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
 		KeyFactory fact = KeyFactory.getInstance("RSA");
 		return fact.generatePrivate(keySpec);
